fix: bug with open menu and modal / flashes blue light on mobile resolution

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
